--- a/Directives/src/app/ng-if/ng-if.component.html
+++ b/Directives/src/app/ng-if/ng-if.component.html
@@ -1,3 +1,32 @@
-<p>
-  ng-if works!
-</p>
+<h3>*ngif</h3>
+
+<div *ngIf="courses.length == 0">
+  Nenhum item relacionado
+</div>
+
+<div *ngIf="courses.length > 0">
+  Lista de Itens
+</div>
+
+<div *ngIf="langs.length == 0">
+  Nenhum item relacionado
+</div>
+
+<div *ngIf="langs.length > 0">
+  Lista de Tecnologias
+</div>
+
+
+<div>
+  <p>Flag:{{flag}}</p>
+</div>
+
+<div *ngIf="flag">
+  <p>Paragrafo ativado pela flag</p>
+</div>
+
+<button (click)="flagChange()">Mudar Flag</button>
+
+<div [hidden]="!flag">
+  Pagrafo alterando o [hidden]="!flag" pela flag
+</div>
