--- a/Directives/src/app/ng-for/ng-for.component.html
+++ b/Directives/src/app/ng-for/ng-for.component.html
@@ -1,3 +1,7 @@
-<p>
-  ng-for works!
-</p>
+<h3>*ngFor</h3>
+
+<ul>
+  <li *ngFor="let tech of tec, let i = index">
+    {{i + 1}} - {{tech}}
+  </li>
+</ul>
