Finalizado ng-content

--- a/Directives/src/app/app.component.html
+++ b/Directives/src/app/app.component.html
@@ -27,3 +27,16 @@
 <br><br>
 
 <app-elvis></app-elvis>
+
+<br><br>
+
+<app-ng-content>
+  <div class="title"> Título do Painel</div>
+
+  <div class="body">
+    Conteúdo do ng-content
+    <br><br>
+    <app-elvis></app-elvis>
+  </div>
+
+</app-ng-content>
